--- a/scss/components/_modal-form.scss
+++ b/scss/components/_modal-form.scss
@@ -71,7 +71,7 @@
 }
 
 .modal-message::placeholder {
-    color: rgba(117, 117, 117, 0, 5);
+    color: rgba(117, 117, 117, 0.5);
 }
 
 .modal-message:focus {
