--- a/scss/components/_media-item.scss
+++ b/scss/components/_media-item.scss
@@ -6,11 +6,16 @@
     justify-content: center;
     align-items: center;
     transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.media-link:hover,
-.media-link:focus {
+    &:hover,
+    &:focus {
     background-color: var(--major-color)
+    }
+
+    &:hover .media-icon, 
+    &:focus .media-icon{
+    fill: var(--background-color);
+    }
 }
 
 .media-icon{
@@ -18,7 +23,3 @@
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
-.media-link:hover .media-icon, 
-.media-link:focus .media-icon{
-    fill: var(--background-color);
-}
