--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -67,11 +67,12 @@
 .footer-media-item{
     width: 44px;
     height: 44px;
+
+    &:not(:last-child){
+        margin-right: 10px;
+    }
 }
 
-.footer-media-item:not(:last-child){
-    margin-right: 10px;
-}
 
 .footer-media-link{
     width: 100%;
@@ -82,18 +83,21 @@
     justify-content: center;
     background-color: #43444D;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus{
+    background-color: var(--major-color);
+    }
+
+    &:hover .footer-media-icon,
+    &:focus .footer-media-icon{
+    fill: var(--background-color);
+    }
 }
 
-.footer-media-link:hover,
-.footer-media-link:focus{
-    background-color: var(--major-color);
-}
+
 
 .footer-media-icon{
     fill: var(--background-color);
 }
 
-.footer-media-link:hover .footer-media-icon,
-.footer-media-link:focus .footer-media-icon{
-    fill: var(--background-color);
-}
