--- a/css/main.css
+++ b/css/main.css
@@ -131,17 +131,16 @@
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-media-link:hover,
-.footer-media-link:focus {
+.footer-media-link:hover, .footer-media-link:focus {
   background-color: var(--major-color);
-}
-
-.footer-media-icon {
-  fill: var(--background-color);
 }
 
 .footer-media-link:hover .footer-media-icon,
 .footer-media-link:focus .footer-media-icon {
+  fill: var(--background-color);
+}
+
+.footer-media-icon {
   fill: var(--background-color);
 }
 
@@ -201,8 +200,7 @@
   align-items: center;
 }
 
-.nav-panel-link:hover,
-.nav-panel-link:focus {
+.nav-panel-link:hover, .nav-panel-link:focus {
   color: var(--major-color);
 }
 
@@ -216,15 +214,7 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mail-icon,
-.tel-icon {
-  fill: var(--description-color);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin-right: 10px;
-}
-
-.nav-panel-contacts:hover,
-.nav-panel-contacts:focus {
+.nav-panel-contacts:hover, .nav-panel-contacts:focus {
   color: var(--major-color);
 }
 
@@ -236,6 +226,13 @@
 .nav-panel-contacts:hover .mail-icon,
 .nav-panel-contacts:focus .mail-icon {
   fill: var(--major-color);
+}
+
+.mail-icon,
+.tel-icon {
+  fill: var(--description-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-right: 10px;
 }
 
 .nav-panel-link.current {
@@ -308,8 +305,7 @@
   border-color: transparent;
 }
 
-.hero-btn:hover,
-.hero-btn:focus {
+.hero-btn:hover, .hero-btn:focus {
   background-color: var(--button-hover-color);
 }
 
@@ -328,8 +324,7 @@
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), filter 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.filter-btn:hover,
-.filter-btn:focus {
+.filter-btn:hover, .filter-btn:focus {
   background-color: var(--major-color);
   color: var(--hub-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -378,8 +373,7 @@
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.project-list-item:hover,
-.project-list-item:focus {
+.project-list-item:hover, .project-list-item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   cursor: pointer;
 }
@@ -434,8 +428,7 @@
   justify-content: center;
 }
 
-.modal-btn:hover,
-.modal-btn:focus {
+.modal-btn:hover, .modal-btn:focus {
   fill: var(--major-color);
   border-color: var(--major-color);
   cursor: pointer;
@@ -542,12 +535,6 @@ body {
   background-color: var(--background-color);
 }
 
-*,
-*::after,
-*::before {
-  box-sizing: inherit;
-}
-
 h1,
 h2,
 h3,
@@ -610,8 +597,7 @@ section {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-item:hover,
-.clients-item:focus {
+.clients-item:hover, .clients-item:focus {
   border-color: var(--major-color);
 }
 
@@ -635,14 +621,8 @@ section {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-link:hover,
-.clients-link:focus {
+.clients-link:hover, .clients-link:focus {
   background-color: var(--background-color);
-}
-
-.clients-icon {
-  fill: var(--icon-color);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-link:hover .clients-icon,
@@ -650,10 +630,16 @@ section {
   fill: var(--major-color);
 }
 
+.clients-icon {
+  fill: var(--icon-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .container {
   width: 1200px;
   margin: 0 auto;
-  padding: 0 15px 0 15px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .form-space {
@@ -734,19 +720,18 @@ section {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.media-link:hover,
-.media-link:focus {
+.media-link:hover, .media-link:focus {
   background-color: var(--major-color);
-}
-
-.media-icon {
-  fill: var(--icon-color);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .media-link:hover .media-icon,
 .media-link:focus .media-icon {
   fill: var(--background-color);
+}
+
+.media-icon {
+  fill: var(--icon-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .media-list {
@@ -830,6 +815,11 @@ section {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-input:focus + .modal-icon {
+  fill: var(--major-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .modal-icon {
   fill: var(--header-color);
 }
@@ -845,11 +835,6 @@ section {
   left: 12px;
   transform: translateY(-50%);
   transition: transform 250ms linear;
-}
-
-.modal-input:focus + .modal-icon {
-  fill: var(--major-color);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-message {
@@ -896,14 +881,14 @@ section {
   border-radius: 2px;
 }
 
-.modal-checkbox:checked + .checkbox-label::before::before {
+.modal-checkbox:checked + .checkbox-label::before {
   background-image: url("../images/checkbox.svg");
   background-color: var(--major-color);
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.modal-checkbox:focus + .checkbox-label::before::before {
+.modal-checkbox:focus + .checkbox-label::before {
   border-color: var(--major-color);
 }
 
