--- a/scss/components/_clients-item.scss
+++ b/scss/components/_clients-item.scss
@@ -3,13 +3,14 @@
     height: 92px;
     border: solid 1px var(--icon-color);
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.clients-item:hover,
-.clients-item:focus{
+    &:hover,
+    &:focus{
     border-color: var(--major-color);
+    }
+
+    &:not(:last-child){
+    margin-right: 30px;
+    }
 }
 
-.clients-item:not(:last-child){
-    margin-right: 30px;
-}
