--- a/scss/components/_container.scss
+++ b/scss/components/_container.scss
@@ -1,5 +1,6 @@
 .container{
     width: 1200px;
     margin: 0 auto;
-    padding: 0 15px 0 15px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
