--- a/scss/components/_modal-form.scss
+++ b/scss/components/_modal-form.scss
@@ -34,6 +34,12 @@
         border-color: var(--major-color);
         transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
+
+    &:focus + .modal-icon {
+        fill: var(--major-color);
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
 }
 
 
@@ -55,10 +61,6 @@
     transition: transform 250ms linear;
 }
 
-.modal-input:focus + .modal-icon {
-    fill: var(--major-color);
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
 .modal-message {
     width: 100%;
@@ -68,17 +70,19 @@
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     resize: none;
+
+    &::placeholder {
+        color: rgba(117, 117, 117, 0.5);
+    }
+    
+    &:focus {
+        outline: none;
+        border-color: var(--major-color);
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
 
-.modal-message::placeholder {
-    color: rgba(117, 117, 117, 0.5);
-}
 
-.modal-message:focus {
-    outline: none;
-    border-color: var(--major-color);
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
 .checkbox-label {
     display: flex;
@@ -91,10 +95,8 @@
     cursor: pointer;
     height: 24px;
     text-align: center;
-}
 
-
-.checkbox-label::before {
+    &::before {
     display:block;
     content: '';
     width: 16px;
@@ -103,13 +105,13 @@
     border: 2px solid #303030;
     cursor: pointer;
     border-radius: 2px;
+    }
 
     .modal-checkbox:checked + &::before {
         background-image: url('../images/checkbox.svg');
         background-color: var(--major-color);
         background-repeat: no-repeat;
         background-position: center;
-    
     }
     
     .modal-checkbox:focus + &::before {
