--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -36,10 +36,12 @@
     height:100%;
     display:flex;
     align-items: center;
+
+    &:not(:last-child){
+        margin-right: 50px;
+    }
 }
-.nav-list-item:not(:last-child){
-    margin-right: 50px;
-}
+
 .nav-panel-link {
     font-weight: 500;
     font-size: 14px;
@@ -50,12 +52,14 @@
     height:100%;
     display: flex;
     align-items: center;
-}
 
-.nav-panel-link:hover,
-.nav-panel-link:focus{
+    &:hover,
+    &:focus{
     color:var(--major-color);
 }
+}
+
+
 .nav-panel-contacts{
     font-weight: 500;
     font-size: 14px;
@@ -64,6 +68,21 @@
     color: var(--description-color);
     display: flex;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus{
+    color:var(--major-color);
+    }
+
+    &:hover .tel-icon,
+    &:focus .tel-icon{
+    fill:var(--major-color);
+    }
+
+    &:hover .mail-icon,
+    &:focus .mail-icon{
+    fill:var(--major-color);
+}
 }
 
 .mail-icon,
@@ -73,36 +92,22 @@
     margin-right: 10px;
 }
 
-.nav-panel-contacts:hover,
-.nav-panel-contacts:focus{
-    color:var(--major-color);
-}
-
-.nav-panel-contacts:hover .tel-icon,
-.nav-panel-contacts:focus .tel-icon{
-    fill:var(--major-color);
-}
-
-.nav-panel-contacts:hover .mail-icon,
-.nav-panel-contacts:focus .mail-icon{
-    fill:var(--major-color);
-}
-
-
 .nav-panel-link.current{
     color:var(--major-color);
     position: relative;
+
+    &::after{
+        content:"";
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 4px;
+        background-color: var(--major-color);
+        bottom: 0;
+    }
 }
 
-.nav-panel-link.current::after{
-    content:"";
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 4px;
-    background-color: var(--major-color);
-    bottom: 0;
-}
+
 
 .header-contacts{
     display: flex;
@@ -111,8 +116,9 @@
 
 .header-contacts-item{
     display:flex;
+
+    &:not(:last-child){
+        margin-right: 50px;
+    }
 }
 
-.header-contacts-item:not(:last-child){
-    margin-right: 50px;
-}
