--- a/scss/layouts/_hero.scss
+++ b/scss/layouts/_hero.scss
@@ -35,8 +35,9 @@
     padding: 10px 32px 10px 32px;
     border-radius: 4px;
     border-color: transparent;
-}
-.hero-btn:hover,
-.hero-btn:focus{
+
+    &:hover,
+    &:focus{
     background-color:var(--button-hover-color);
+}
 }
