--- a/scss/layouts/_portfolio.scss
+++ b/scss/layouts/_portfolio.scss
@@ -11,14 +11,16 @@
     cursor: pointer;
     padding: 6px 22px 6px 22px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), filter 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.filter-btn:hover,
-.filter-btn:focus{
+    &:hover,
+    &:focus{
     background-color:var(--major-color);
     color:var(--hub-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
 }
+
+
 
 .filter-btn-list{
     margin-bottom: 50px
@@ -61,12 +63,12 @@
     margin-top: 30px;
     background: #FFFFFF;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.project-list-item:hover,
-.project-list-item:focus{
+    &:hover,
+    &:focus{
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
     cursor: pointer;
+    }
 }
 
 .project-list-link,
@@ -118,12 +120,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-}
 
-.modal-btn:hover,
-.modal-btn:focus{
+    &:hover,
+    &:focus{
     fill: var(--major-color);
     border-color: var(--major-color);
     cursor:pointer;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+}
+
