--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,6 +21,7 @@
 @import "./components/modal-description";
 @import "./components/modal-form";
 @import "./components/modal";
+@import "./components/buttons";
 //UTILS
 @import "./utils/stealth";
 @import "./utils/variables";
