--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -8,7 +8,7 @@
     background-color: var(--background-filler-color);
 }
 
-.studio-logo-footer{
+.header__logo-footer{
     font-family: Raleway;
     font-weight: 700;
     font-size: 26px;
