--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@
   background-color: var(--background-filler-color);
 }
 
-.studio-logo-footer {
+.header__logo-footer {
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
@@ -148,17 +148,17 @@
   fill: var(--background-color);
 }
 
-.studio-header {
+.header {
   border-bottom: 1px solid #ECECEC;
 }
 
-.header-container {
+.header__container {
   display: flex;
   align-items: center;
   height: 80px;
 }
 
-.studio-logo {
+.header__logo {
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
@@ -172,7 +172,7 @@
   color: #000000;
 }
 
-.nav-panel {
+.header__nav {
   display: flex;
   height: 100%;
 }
@@ -192,7 +192,7 @@
   margin-right: 50px;
 }
 
-.nav-panel-link {
+.header__nav-link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -204,11 +204,11 @@
   align-items: center;
 }
 
-.nav-panel-link:hover, .nav-panel-link:focus {
+.header__nav-link:hover, .header__nav-link:focus {
   color: var(--major-color);
 }
 
-.nav-panel-contacts {
+.header__nav-contacts {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -218,17 +218,17 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-panel-contacts:hover, .nav-panel-contacts:focus {
+.header__nav-contacts:hover, .header__nav-contacts:focus {
   color: var(--major-color);
 }
 
-.nav-panel-contacts:hover .tel-icon,
-.nav-panel-contacts:focus .tel-icon {
+.header__nav-contacts:hover .tel-icon,
+.header__nav-contacts:focus .tel-icon {
   fill: var(--major-color);
 }
 
-.nav-panel-contacts:hover .mail-icon,
-.nav-panel-contacts:focus .mail-icon {
+.header__nav-contacts:hover .mail-icon,
+.header__nav-contacts:focus .mail-icon {
   fill: var(--major-color);
 }
 
@@ -239,12 +239,12 @@
   margin-right: 10px;
 }
 
-.nav-panel-link.current {
+.header__nav-link.current {
   color: var(--major-color);
   position: relative;
 }
 
-.nav-panel-link.current::after {
+.header__nav-link.current::after {
   content: "";
   display: block;
   position: absolute;
