--- a/css/main.css
+++ b/css/main.css
@@ -182,17 +182,17 @@
   align-items: center;
 }
 
-.header__list-item {
+.header__item {
   height: 100%;
   display: flex;
   align-items: center;
 }
 
-.header__list-item:not(:last-child) {
+.header__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.header__nav-link {
+.header__link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -204,11 +204,11 @@
   align-items: center;
 }
 
-.header__nav-link:hover, .header__nav-link:focus {
+.header__link:hover, .header__link:focus {
   color: var(--major-color);
 }
 
-.header__nav-contacts {
+.header__contacts {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -218,17 +218,17 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header__nav-contacts:hover, .header__nav-contacts:focus {
+.header__contacts:hover, .header__contacts:focus {
   color: var(--major-color);
 }
 
-.header__nav-contacts:hover .header__tel,
-.header__nav-contacts:focus .header__tel {
+.header__contacts:hover .header__tel,
+.header__contacts:focus .header__tel {
   fill: var(--major-color);
 }
 
-.header__nav-contacts:hover .header__mail,
-.header__nav-contacts:focus .header__mail {
+.header__contacts:hover .header__mail,
+.header__contacts:focus .header__mail {
   fill: var(--major-color);
 }
 
@@ -239,12 +239,12 @@
   margin-right: 10px;
 }
 
-.header__nav-link.current {
+.header__link.current {
   color: var(--major-color);
   position: relative;
 }
 
-.header__nav-link.current::after {
+.header__link.current::after {
   content: "";
   display: block;
   position: absolute;
