--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,5 +23,5 @@
 @import "./components/modal";
 @import "./components/buttons";
 //UTILS
-@import "./utils/stealth";
+@import "./utils/visually-hidden";
 @import "./utils/variables";
